# maneuver

./: .gitignore  Cargo.toml  Makefile.toml
embedded/: .gdbinit  Cargo.toml  Makefile.toml  flash.cfg  memory.x
embedded/.cargo/: config
embedded/src/: handler.rs  lib.rs  main.rs
embedded/src/handler/: bmx055.rs  madgwick.rs  potentio.rs  serial.rs
reader/: Cargo.toml  Makefile.toml
reader/src/: main.rs
visualizer/: Cargo.toml  Makefile.toml
visualizer/src/: graphics.rs  main.rs
