[package]
name = "embedded"
version = "0.1.0"
authors = ["kirohy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.6"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
libm = "0.2.1"

[dependencies.stm32f4xx-hal]
version = "0.8.2"
features = ["stm32f446", "rt"]

